apps/silverbullet/config/silverbullet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silverbullet
  namespace: silverbullet
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - secretName: silverbullet-tls
      hosts:
        - silverbullet.cubancodelab.net
  rules:
    - host: silverbullet.cubancodelab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silverbullet
                port:
                  number: 3000
